--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,12 +40,12 @@ jobs:
 
 
       - name: Add .nojekyll
-        run: touch ./dist/.nojekyll
+        run: touch ./dist/.mkdir -p ./dist/client && touch ./dist/client/.nojekyll
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
           path: ./dist
-
+./dist/client
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
