Refactor deploy.yml for GitHub Pages deployment

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
-      steps:
+    steps:
       - name: Checkout
         uses: actions/checkout@v4
 
@@ -32,20 +32,23 @@ jobs:
 
       - name: Install dependencies
         run: npm install --legacy-peer-deps
+
       - name: Build
         run: npm run build
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
 
-
       - name: Add .nojekyll
-      run: mkdir -p ./dist/client && touch ./dist/client/.nojekyll
-            - name: Upload artifact
+        run: |
+          mkdir -p ./dist/client
+          touch ./dist/client/.nojekyll
+
+      - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-                path: ./dist/client
+          path: ./dist/client
 
-                      - name: Deploy to GitHub Pages
-                              id: deployment
-                                      uses: actions/deploy-pages@v4
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
