--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,13 +41,13 @@ jobs:
 
       - name: Add .nojekyll
         run: |
-          mkdir -p ./dist/client
-          touch ./dist/client/.nojekyll
+          mkdir -p ./dist
+          touch ./dist/.nojekyll
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: ./dist/client
+          path: ./dist
 
       - name: Deploy to GitHub Pages
         id: deployment
